Add of method to export .xml file from database

--- a/FilesIntegration/Views/XMLManager/PushXmlIndex.cshtml
+++ b/FilesIntegration/Views/XMLManager/PushXmlIndex.cshtml
@@ -1,7 +1,9 @@
-﻿
-@{
-    ViewBag.Title = "PushXmlIndex";
+﻿@{
+    ViewBag.Title = "Generar XML";
 }
 
-<h2>PushXmlIndex</h2>
+<div class="jumbotron">
+    <h1>Exportar XML</h1>
+    @Html.ActionLink("Exportar XML", "PushXml", "XMLManager", null, new { @class = "btn btn-primary" })
+</div>
 
