Add new services that connect with the old one

--- a/FilesIntegration/Views/Shared/_Layout.cshtml
+++ b/FilesIntegration/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Pull XML", "Pull", "XMLManager")</li>
+                    <li>@Html.ActionLink("Push XML", "Push", "XMLManager")</li>
                 </ul>
             </div>
         </div>
